--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,51 @@
-distlib==0.3.8
-filelock==3.13.3
-platformdirs==4.2.0
-virtualenv==20.25.1
-virtualenvwrapper-win==1.2.7
+asgiref==3.7.2
+certifi==2024.2.2
+cffi==1.15.1
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==42.0.5
+defusedxml==0.8.0rc2
+Django==3.2.24
+django-cors-headers==4.1.0
+django-filter==23.5
+django-leaflet==0.29.1
+django-rest-framework==0.1.0
+django-templated-mail==1.1.1
+django_debug_toolbar==3.8.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
+Flask==2.2.5
+geos==0.2.3
+gis==0.2.1
+idna==3.6
+importlib-metadata==6.7.0
+itsdangerous==2.1.2
+itypes==1.2.0
+Jinja2==3.1.3
+lxml==5.1.0
+MarkupSafe==2.1.5
+mysqlclient==2.2.4
+numpy==1.26.4
+oauthlib==3.2.2
+pillow==10.2.0
+pycparser==2.21
+PyJWT==2.8.0
+PyMySQL==1.1.0
+python-decouple==3.8
+python3-openid==3.2.0
+pytz==2024.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.4.2
+sqlparse==0.4.4
+typing_extensions==4.7.1
+uritemplate==4.1.1
+urllib3==2.0.7
+Werkzeug==2.2.3
+zipp==3.15.0
